--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
 		font-size: 11.5pt;
 		line-height: 2em;
 	}
-	
+
 	h1, h2, h3, h4, h5, h6
 	{
 		font-family: 'Open Sans Condensed', sans-serif;
@@ -54,7 +54,7 @@
 		color: inherit;
 	}
 
-	
+
 	h2.major
 	{
 		position: relative;
@@ -67,7 +67,7 @@
 			position: relative;
 			display: inline-block;
 		}
-	
+
 	a
 	{
 		color: #006376;
@@ -84,31 +84,31 @@
 		font-weight: 700;
 		color: #6b7770;
 	}
-	
+
 	i, em
 	{
 		font-style: italic;
 	}
-	
+
 	br.clear
 	{
 		clear: both;
 	}
-	
+
 	sub
 	{
 		position: relative;
 		top: 0.5em;
 		font-size: 0.8em;
 	}
-	
+
 	sup
 	{
 		position: relative;
 		top: -0.5em;
 		font-size: 0.8em;
 	}
-	
+
 	hr
 	{
 		border: 0;
@@ -122,20 +122,20 @@
 		padding: 1em 0 1em 1.5em;
 		font-style: italic;
 	}
-	
+
 	p, ul, ol, dl, table
 	{
 		margin-bottom: 3em;
 	}
-	
+
 	/* Section/Article */
-	
+
 		section,
 		article
 		{
 			margin-bottom: 6em;
 		}
-		
+
 		section > :last-child,
 		article > :last-child
 		{
@@ -165,14 +165,14 @@
 			display: inline-block;
 			border-radius: 8px;
 		}
-		
+
 			.image img
 			{
 				display: block;
 				width: 100%;
 				border-radius: 8px;
 			}
-			
+
 			.image:before
 			{
 				content: '';
@@ -190,20 +190,20 @@
 				display: block;
 				width: 100%;
 			}
-			
+
 			.image.featured
 			{
 				display: block;
 				width: 100%;
 				margin: 0 0 2em 0;
 			}
-			
+
 			.image.left
 			{
 				float: left;
 				margin: 0 2em 2em 0;
 			}
-			
+
 			.image.centered
 			{
 				display: block;
@@ -215,9 +215,9 @@
 					margin: 0 auto;
 					width: auto;
 				}
-	
+
 	/* Button */
-		
+
 		input[type="button"],
 		input[type="submit"],
 		input[type="reset"],
@@ -258,7 +258,7 @@
 			{
 				background: #a1cd9b;
 			}
-		
+
 			input[type="button"].alt,
 			input[type="submit"].alt,
 			input[type="reset"].alt,
@@ -274,7 +274,7 @@
 				{
 					background: #ccd5d0;
 				}
-				
+
 				input[type="button"].alt:active,
 				input[type="submit"].alt:active,
 				input[type="reset"].alt:active,
@@ -282,7 +282,7 @@
 				{
 					background: #b1bab5;
 				}
-	
+
 	/* List */
 
 		ul.default
@@ -290,23 +290,23 @@
 			list-style: disc;
 			padding-left: 1em;
 		}
-		
+
 			ul.default li
 			{
 				padding-left: 0.5em;
 			}
-				
+
 		ul.divided
 		{
 		}
-		
+
 			ul.divided > li
 			{
 				border-top: solid 2px #e7eae8;
 				padding-top: 2.35em;
 				margin-top: 2.35em;
 			}
-			
+
 			ul.divided > li:first-child
 			{
 				border-top: 0;
@@ -323,7 +323,7 @@
 				display: inline-block;
 				margin: 0 0 0 1em;
 			}
-			
+
 				ul.actions li:first-child
 				{
 					margin-left: 0;
@@ -333,7 +333,7 @@
 		{
 			cursor: default;
 		}
-		
+
 			ul.contact li
 			{
 				position: relative;
@@ -363,14 +363,14 @@
 					background: #c1cac5;
 					text-align: center;
 				}
-				
+
 					ul.contact li a:before
 					{
 						color: #f2f5f3;
 						font-size: 32px;
 						line-height: 48px;
 					}
-				
+
 				ul.contact li:hover a.fa-facebook		{ background-color: #3C5A98; }
 				ul.contact li:hover a.fa-twitter		{ background-color: #2DAAE4; }
 				ul.contact li:hover a.fa-dribbble		{ background-color: #C4376B; }
@@ -392,7 +392,7 @@
 		{
 			cursor: default;
 		}
-		
+
 			ul.special li
 			{
 				position: relative;
@@ -452,7 +452,7 @@
 			font-size: 0.85em;
 			color: #a1aaa5;
 		}
-		
+
 			ul.meta li
 			{
 				position: relative;
@@ -470,7 +470,7 @@
 			{
 				margin-left: 0;
 			}
-			
+
 			ul.meta li:before
 			{
 				opacity: 0.5;
@@ -495,7 +495,7 @@
 
 		ol
 		{
-		}	
+		}
 
 			ol.default
 			{
@@ -513,7 +513,7 @@
 		form
 		{
 		}
-		
+
 			form label
 			{
 				display: block;
@@ -523,7 +523,7 @@
 				text-transform: uppercase;
 				color: #6b7770;
 			}
-		
+
 			form input[type="text"],
 			form input[type="email"],
 			form input[type="password"],
@@ -554,7 +554,7 @@
 				line-height: 3em;
 				padding: 0 1em;
 			}
-				
+
 			form textarea
 			{
 				min-height: 9em;
@@ -592,12 +592,12 @@
 			}
 
 	/* Tables */
-	
+
 		table
 		{
 			width: 100%;
 		}
-		
+
 			table.default
 			{
 				width: 100%;
@@ -612,12 +612,12 @@
 					{
 						border-top: 0;
 					}
-			
+
 				table.default td
 				{
 					padding: 0.5em 1em 0.5em 1em;
 				}
-				
+
 				table.default th
 				{
 					text-align: left;
@@ -628,17 +628,17 @@
 					text-transform: uppercase;
 					color: #6b7770;
 				}
-			
+
 				table.default thead
 				{
 					background: #E7EAE8;
 					color: #fff;
 				}
-				
+
 				table.default tfoot
 				{
 				}
-				
+
 				table.default tbody
 				{
 				}
@@ -657,7 +657,7 @@
 			.box.features
 			{
 			}
-			
+
 			.box.feature
 			{
 			}
@@ -707,7 +707,7 @@
 	.sidebar
 	{
 	}
-	
+
 	.content
 	{
 	}
@@ -719,7 +719,7 @@
 	#banner-wrapper
 	{
 		position: relative;
-		background-image:			url('images/overlay.png'),	url('images/overlay.png'),	url('../images/banner.jpg');
+		background-image:			url('images/overlay.png'),	url('images/overlay.png'),	url('../images/algorithm.jpg');
 		background-position:		top left,					top left,					center center;
 		background-repeat:			repeat,						repeat,						no-repeat;
 		background-size:			auto,						auto,						cover;
@@ -732,7 +732,7 @@
 		border-top: solid 5px #b1ddab;
 		border-bottom: solid 5px #c1cac5;
 	}
-	
+
 /*********************************************************************************/
 /* Header                                                                        */
 /*********************************************************************************/
@@ -769,7 +769,7 @@
 		{
 			color: #fff;
 		}
-		
+
 		#banner p
 		{
 			display: block;
@@ -821,7 +821,7 @@
 	#footer
 	{
 	}
-	
+
 		#footer a
 		{
 			color: inherit;
@@ -844,17 +844,17 @@
 		border-radius: 8px;
 		color: #8b9790;
 	}
-	
+
 		#copyright a
 		{
 			color: inherit;
 		}
-		
+
 		#copyright .menu
 		{
 			margin: 0;
 		}
-		
+
 			#copyright .menu li
 			{
 				border-color: #C1CAC5;
